part2_istio_metrics/istio-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  namespace: demo
  name: demo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: demo
  name: istio-ingress-vs
spec:
  hosts:
    - '*'
  gateways:
    - demo-gateway
  http:
    - route:
        - destination:
            host: go-cpu-intensive.demo.svc.cluster.local
            port:
              number: 80
